<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.android.musicstructureapp.MainActivity">

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/comment_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/new_release"
                android:src="@drawable/bruno_mars"
                style="@style/list_cover" />

            <TextView
                android:text="@string/new_release"
                style="@style/list_name"/>

            <ImageView
                android:id="@+id/popular"
                android:src="@drawable/twenty_one_pilots"
                style="@style/list_cover"/>

            <TextView
                android:text="@string/popular"
                style="@style/list_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recommended"
                android:src="@drawable/ed_sheeran"
                style="@style/list_cover"/>

            <TextView
                android:text="@string/recommend"
                style="@style/list_name"/>

            <ImageView
                android:id="@+id/greatest"
                android:src="@drawable/micheal_jackson"
                style="@style/list_cover"/>

            <TextView
                android:text="@string/greatest"
                style="@style/list_name"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>